--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ setenv =
 	PYTHONHASHSEED=0
 
 commands=
-	python tg_regression_model/train_pipeline.py
+	python tgApp/train_pipeline.py
 	pytest \
 	-s \
 	-vv \
@@ -37,7 +37,7 @@ setenv =
 	{[testenv:test_package]setenv}
 
 commands=
-	python tg_regression_model/train_pipeline.py
+	python tgApp/train_pipeline.py
 
 
 [testenv:typechecks]
@@ -46,7 +46,7 @@ envdir = {toxworkdir}/test_package
 deps =
 	{[testenv:test_package]deps}
 
-commands = {posargs:mypy tg_regression_model}
+commands = {posargs:mypy tgApp}
 
 
 [testenv:stylechecks]
@@ -55,7 +55,7 @@ envdir = {toxworkdir}/test_package
 deps =
 	{[testenv:test_package]deps}
 
-commands = {posargs:flake8 tg_regression_model tests}
+commands = {posargs:flake8 tgApp tests}
 
 
 [testenv:lint]
@@ -65,10 +65,10 @@ deps =
 	{[testenv:test_package]deps}
 
 commands =
-	isort tg_regression_model tests
-	black tg_regression_model tests
-	mypy tg_regression_model
-	flake8 tg_regression_model
+	isort tgApp tests
+	black tgApp tests
+	mypy tgApp
+	flake8 tgApp
 [flake8]
 exclude = .git,env
 max-line-length = 90
