--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,4 +8,5 @@ feature-engine>=1.0.2,<1.1.0
 joblib>=1.0.1,<1.1.0
 xgboost
 gensim==3.8.3
+jupyterlab
 mol2vec @ git+https://github.com/samoturk/mol2vec
