--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,12 +1,12 @@
 numpy>=1.20.0,<1.21.0
 pandas>=1.2.0,<1.3.0
 pydantic>=1.8.1,<1.9.0
-scikit-learn
+scikit-learn<=0.24.2
 strictyaml>=1.3.2,<1.4.0
 ruamel.yaml==0.16.12
 feature-engine>=1.0.2,<1.1.0
 joblib>=1.0.1,<1.1.0
-xgboost
+xgboost<=1.4.0
 gensim==3.8.3
 jupyterlab
 mol2vec @ git+https://github.com/samoturk/mol2vec
