Renaming to tgboost

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 .vscode
 
 # datasets
-tgApp/datasets/TETKO_embedded_all.pkl
-tgApp/datasets/Tetko_melting_point.sdf
-tgApp/datasets/BradleyDoublePlusGoodMeltingPointDataset_Highly_Curated_and_Validated.xlsx
-tgApp/datasets/Koop_dataset_Rothfuss_t0_bis.csv
+tgboost/datasets/TETKO_embedded_all.pkl
+tgboost/datasets/Tetko_melting_point.sdf
+tgboost/datasets/BradleyDoublePlusGoodMeltingPointDataset_Highly_Curated_and_Validated.xlsx
+tgboost/datasets/Koop_dataset_Rothfuss_t0_bis.csv
 
 # Jupyter notebooks
 tests/*.ipynb
@@ -19,8 +19,8 @@ tests/.ipynb_checkpoints
 # Folders with wheels for pypi
 build
 dist
-tgApp.egg-info
+tgboost.egg-info
 
 # Additional Files
-tgApp/SMILES_used_for_training.pkl
-tests/__pycache__
+tgboost/SMILES_used_for_training.pkl
+**/__pycache__
