--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ setenv =
 	PYTHONHASHSEED=0
 
 commands=
-	python tgApp/train_pipeline.py
+	python tgboost/train_pipeline.py
 	pytest \
 	-s \
 	-vv \
@@ -37,7 +37,7 @@ setenv =
 	{[testenv:test_package]setenv}
 
 commands=
-	python tgApp/train_pipeline.py
+	python tgboost/train_pipeline.py
 
 
 [testenv:typechecks]
@@ -46,7 +46,7 @@ envdir = {toxworkdir}/test_package
 deps =
 	{[testenv:test_package]deps}
 
-commands = {posargs:mypy tgApp}
+commands = {posargs:mypy tgboost}
 
 
 [testenv:stylechecks]
@@ -55,7 +55,7 @@ envdir = {toxworkdir}/test_package
 deps =
 	{[testenv:test_package]deps}
 
-commands = {posargs:flake8 tgApp tests}
+commands = {posargs:flake8 tgboost tests}
 
 
 [testenv:lint]
@@ -65,10 +65,10 @@ deps =
 	{[testenv:test_package]deps}
 
 commands =
-	isort tgApp tests
-	black tgApp tests
-	mypy tgApp
-	flake8 tgApp
+	isort tgboost tests
+	black tgboost tests
+	mypy tgboost
+	flake8 tgboost
 [flake8]
 exclude = .git,env
 max-line-length = 90
