--- a/tox.ini
+++ b/tox.ini
@@ -12,18 +12,22 @@ envlist = test_package, typechecks, stylechecks, lint
 skipsdist = True
 
 [testenv]
-install_command = pip install {opts} {packages}
+install_command = python3.7 -m pip install {opts} {packages}
+
 [testenv:test_package]
 deps =
 	-rrequirements/test_requirements.txt
+	-rrequirements/requirements.txt
+
+base_python = py37
 
 setenv =
 	PYTHONPATH=.
 	PYTHONHASHSEED=0
 
 commands=
-	python tgboost/train_pipeline.py
-	pytest \
+	python3.7 tgboost/train_pipeline.py
+	python3.7 -m pytest \
 	-s \
 	-vv \
 	{posargs:tests/}
